# basic_application

./: .gitignore  setup.cfg
src/basic_application/: __init__.py  basic_application.py  config_manager.py  decorators.py  log_manager.py
tests/: test.yaml  test_app.py
