[metadata]
name = basic_application
version = 0.0.14
author = Aleksei Zosimov
author_email = lesha.spb@gmail.com
description = Basic application with configuration and logging features.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/zosimovaa/basic_application/src/master/
project_urls =
    Bug Tracker =  https://bitbucket.org/zosimovaa/basic_application/src/master/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
